Bug 524674, nsIEventListenerService: tracking of dynamically added and removed event listeners, r=masayuki